X3-308023: Runtime update to RT 096.002.00044 fails Compliancy with Java 11